--- a/TestApplication/TestApplication/TestApplication.csproj
+++ b/TestApplication/TestApplication/TestApplication.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AddedClassBranchA.cs" />
+    <Compile Include="AddedInC.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
